Generate CV component completed

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -26,20 +26,22 @@ footer {
         display: none !important;
     }
 
+    main {
+        box-shadow: none !important;
+    }
+
     .work h3 ,
     .education h3 {
         margin: 0;
         padding: 0;
     }
 
-    .work-hr,
-    .edu-hr,
-    .name-hr {
-        display: block !important;
-        border: 1px solid black;
-        background-color: black;
-        color: black;
-        height: 0.5px;
+    
+    .div-hr {
+        height: 0px !important;
+        border: 2px solid black;
+        border-bottom: none;
+        width: 100% !important;
     }
 
     button {
